// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Filters /> should add a new "Exists" filter 1`] = `
Array [
  .emotion-0 {
  height: 1px;
  box-shadow: 0 0 4px 0 rgba(0,0,0,1);
  z-index: 10;
  margin-top: -1px;
}

<div
    className="emotion-0"
  />,
  .emotion-178 {
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-173 {
  overflow-x: auto;
}

.emotion-39 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-39:last-of-type > div:last-of-type {
  border-bottom: 1px solid #3b3b3b;
}

.emotion-39:first-of-type > div {
  border-top: none;
}

.emotion-3 {
  border-top: 1px solid #3b3b3b;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 h4 {
  font-size: 15px;
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-153:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-177 {
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-174 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: nowrap;
  -ms-flex-flow: nowrap;
  flex-flow: nowrap;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
}

.emotion-174:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-174[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-174,
.emotion-174:hover,
.emotion-174:visited {
  background-color: #808080;
}

.emotion-174:hover {
  background-color: #b3b3b3;
}

.emotion-174[aria-disabled=true] {
  background-color: #808080;
}

.emotion-174 svg {
  margin-right: 8px;
}

.emotion-175 {
  width: 8px;
  min-width: 8px;
}

.emotion-176 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: nowrap;
  -ms-flex-flow: nowrap;
  flex-flow: nowrap;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
}

.emotion-176:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-176[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-176,
.emotion-176:hover,
.emotion-176:visited {
  background-color: #73b61c;
}

.emotion-176:hover {
  background-color: #96c955;
}

.emotion-176[aria-disabled=true] {
  background-color: #808080;
}

.emotion-176 svg {
  margin-right: 8px;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-38 {
  width: 100%;
  background-color: #191919;
}

.emotion-37 {
  padding: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-14 {
  margin-left: -16px;
  margin-right: -16px;
  padding: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  border-top: 4px solid #3b3b3b;
}

.emotion-14:first-of-type {
  padding-top: 0;
  border-top: none;
}

.emotion-14:last-of-type {
  padding-bottom: 0;
}

.emotion-4 {
  font-family: Roboto Mono;
  font-weight: 400;
}

.emotion-13 {
  margin-left: 32px;
  border-top: 1px solid #3b3b3b;
}

.emotion-13:first-of-type {
  border-top: none;
}

.emotion-12 {
  padding: 8px;
  color: #b3b3b3;
  margin-left: -32px;
}

.emotion-12:hover {
  background-color: #027aff38;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding-bottom: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-5 {
  margin: 0;
  padding: 0;
  width: 16px;
  height: 16px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-7 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-6 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-10 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding-left: 8px;
}

.emotion-9 {
  color: #b3b3b3;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
}

<div
    className="emotion-178"
  >
    <div
      className="emotion-173"
    >
      <div
        className="emotion-39"
      >
        <div
          className="emotion-3"
        >
          <button
            aria-label="Collapse Section"
            className="emotion-1"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="emotion-0"
              color="#808080"
              data-file-name="chevron.svg"
              width={20}
            />
          </button>
          <h4
            className="emotion-2"
          >
            Analysis
          </h4>
        </div>
        <div
          className="emotion-38"
        >
          <div
            className="emotion-37"
          >
            <div
              className="emotion-14"
            >
              <h4
                className="emotion-4"
              >
                zvi
              </h4>
              <div
                className="emotion-13"
              >
                <div
                  className="emotion-12"
                >
                  <label
                    className="emotion-11"
                  >
                    <div
                      className="emotion-8"
                    >
                      <input
                        className="emotion-5"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="analysis.zvi.tinyProxy"
                      />
                      <div
                        className="emotion-7"
                      >
                        <svg
                          className="emotion-6"
                          data-file-name="checkmark.svg"
                          width={20}
                        />
                      </div>
                    </div>
                    <div
                      className="emotion-10"
                    >
                      <span
                        className="emotion-9"
                      >
                        tinyProxy
                      </span>
                    </div>
                  </label>
                </div>
              </div>
            </div>
            <div
              className="emotion-14"
            >
              <h4
                className="emotion-4"
              >
                zvi-image-similarity
              </h4>
              <div
                className="emotion-13"
              >
                <div
                  className="emotion-12"
                >
                  <label
                    className="emotion-11"
                  >
                    <div
                      className="emotion-8"
                    >
                      <input
                        className="emotion-5"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="analysis.zvi-image-similarity.simhash"
                      />
                      <div
                        className="emotion-7"
                      >
                        <svg
                          className="emotion-6"
                          data-file-name="checkmark.svg"
                          width={20}
                        />
                      </div>
                    </div>
                    <div
                      className="emotion-10"
                    >
                      <span
                        className="emotion-9"
                      >
                        simhash
                      </span>
                    </div>
                  </label>
                </div>
              </div>
            </div>
            <div
              className="emotion-14"
            >
              <h4
                className="emotion-4"
              >
                zvi-object-detection
              </h4>
              <div
                className="emotion-13"
              >
                <div
                  className="emotion-12"
                >
                  <label
                    className="emotion-11"
                  >
                    <div
                      className="emotion-8"
                    >
                      <input
                        className="emotion-5"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="analysis.zvi-object-detection.count"
                      />
                      <div
                        className="emotion-7"
                      >
                        <svg
                          className="emotion-6"
                          data-file-name="checkmark.svg"
                          width={20}
                        />
                      </div>
                    </div>
                    <div
                      className="emotion-10"
                    >
                      <span
                        className="emotion-9"
                      >
                        count
                      </span>
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="emotion-39"
      >
        <div
          className="emotion-3"
        >
          <button
            aria-label="Collapse Section"
            className="emotion-1"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="emotion-0"
              color="#808080"
              data-file-name="chevron.svg"
              width={20}
            />
          </button>
          <h4
            className="emotion-2"
          >
            Clip
          </h4>
        </div>
        <div
          className="emotion-38"
        >
          <div
            className="emotion-37"
          >
            <div
              className="emotion-13"
            >
              <div
                className="emotion-12"
              >
                <label
                  className="emotion-11"
                >
                  <div
                    className="emotion-8"
                  >
                    <input
                      className="emotion-5"
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                      value="clip.length"
                    />
                    <div
                      className="emotion-7"
                    >
                      <svg
                        className="emotion-6"
                        data-file-name="checkmark.svg"
                        width={20}
                      />
                    </div>
                  </div>
                  <div
                    className="emotion-10"
                  >
                    <span
                      className="emotion-9"
                    >
                      length
                    </span>
                  </div>
                </label>
              </div>
            </div>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-12"
              >
                <label
                  className="emotion-11"
                >
                  <div
                    className="emotion-8"
                  >
                    <input
                      className="emotion-5"
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                      value="clip.pile"
                    />
                    <div
                      className="emotion-7"
                    >
                      <svg
                        className="emotion-6"
                        data-file-name="checkmark.svg"
                        width={20}
                      />
                    </div>
                  </div>
                  <div
                    className="emotion-10"
                  >
                    <span
                      className="emotion-9"
                    >
                      pile
                    </span>
                  </div>
                </label>
              </div>
            </div>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-12"
              >
                <label
                  className="emotion-11"
                >
                  <div
                    className="emotion-8"
                  >
                    <input
                      className="emotion-5"
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                      value="clip.sourceAssetId"
                    />
                    <div
                      className="emotion-7"
                    >
                      <svg
                        className="emotion-6"
                        data-file-name="checkmark.svg"
                        width={20}
                      />
                    </div>
                  </div>
                  <div
                    className="emotion-10"
                  >
                    <span
                      className="emotion-9"
                    >
                      sourceAssetId
                    </span>
                  </div>
                </label>
              </div>
            </div>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-12"
              >
                <label
                  className="emotion-11"
                >
                  <div
                    className="emotion-8"
                  >
                    <input
                      className="emotion-5"
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                      value="clip.start"
                    />
                    <div
                      className="emotion-7"
                    >
                      <svg
                        className="emotion-6"
                        data-file-name="checkmark.svg"
                        width={20}
                      />
                    </div>
                  </div>
                  <div
                    className="emotion-10"
                  >
                    <span
                      className="emotion-9"
                    >
                      start
                    </span>
                  </div>
                </label>
              </div>
            </div>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-12"
              >
                <label
                  className="emotion-11"
                >
                  <div
                    className="emotion-8"
                  >
                    <input
                      className="emotion-5"
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                      value="clip.stop"
                    />
                    <div
                      className="emotion-7"
                    >
                      <svg
                        className="emotion-6"
                        data-file-name="checkmark.svg"
                        width={20}
                      />
                    </div>
                  </div>
                  <div
                    className="emotion-10"
                  >
                    <span
                      className="emotion-9"
                    >
                      stop
                    </span>
                  </div>
                </label>
              </div>
            </div>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-12"
              >
                <label
                  className="emotion-11"
                >
                  <div
                    className="emotion-8"
                  >
                    <input
                      className="emotion-5"
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                      value="clip.timeline"
                    />
                    <div
                      className="emotion-7"
                    >
                      <svg
                        className="emotion-6"
                        data-file-name="checkmark.svg"
                        width={20}
                      />
                    </div>
                  </div>
                  <div
                    className="emotion-10"
                  >
                    <span
                      className="emotion-9"
                    >
                      timeline
                    </span>
                  </div>
                </label>
              </div>
            </div>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-12"
              >
                <label
                  className="emotion-11"
                >
                  <div
                    className="emotion-8"
                  >
                    <input
                      className="emotion-5"
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                      value="clip.type"
                    />
                    <div
                      className="emotion-7"
                    >
                      <svg
                        className="emotion-6"
                        data-file-name="checkmark.svg"
                        width={20}
                      />
                    </div>
                  </div>
                  <div
                    className="emotion-10"
                  >
                    <span
                      className="emotion-9"
                    >
                      type
                    </span>
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="emotion-39"
      >
        <div
          className="emotion-3"
        >
          <button
            aria-label="Collapse Section"
            className="emotion-1"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="emotion-0"
              color="#808080"
              data-file-name="chevron.svg"
              width={20}
            />
          </button>
          <h4
            className="emotion-2"
          >
            Location
          </h4>
        </div>
        <div
          className="emotion-38"
        >
          <div
            className="emotion-37"
          >
            <div
              className="emotion-13"
            >
              <div
                className="emotion-12"
              >
                <label
                  className="emotion-11"
                >
                  <div
                    className="emotion-8"
                  >
                    <input
                      className="emotion-5"
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                      value="location.city"
                    />
                    <div
                      className="emotion-7"
                    >
                      <svg
                        className="emotion-6"
                        data-file-name="checkmark.svg"
                        width={20}
                      />
                    </div>
                  </div>
                  <div
                    className="emotion-10"
                  >
                    <span
                      className="emotion-9"
                    >
                      city
                    </span>
                  </div>
                </label>
              </div>
            </div>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-12"
              >
                <label
                  className="emotion-11"
                >
                  <div
                    className="emotion-8"
                  >
                    <input
                      className="emotion-5"
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                      value="location.code"
                    />
                    <div
                      className="emotion-7"
                    >
                      <svg
                        className="emotion-6"
                        data-file-name="checkmark.svg"
                        width={20}
                      />
                    </div>
                  </div>
                  <div
                    className="emotion-10"
                  >
                    <span
                      className="emotion-9"
                    >
                      code
                    </span>
                  </div>
                </label>
              </div>
            </div>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-12"
              >
                <label
                  className="emotion-11"
                >
                  <div
                    className="emotion-8"
                  >
                    <input
                      className="emotion-5"
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                      value="location.country"
                    />
                    <div
                      className="emotion-7"
                    >
                      <svg
                        className="emotion-6"
                        data-file-name="checkmark.svg"
                        width={20}
                      />
                    </div>
                  </div>
                  <div
                    className="emotion-10"
                  >
                    <span
                      className="emotion-9"
                    >
                      country
                    </span>
                  </div>
                </label>
              </div>
            </div>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-12"
              >
                <label
                  className="emotion-11"
                >
                  <div
                    className="emotion-8"
                  >
                    <input
                      className="emotion-5"
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                      value="location.point"
                    />
                    <div
                      className="emotion-7"
                    >
                      <svg
                        className="emotion-6"
                        data-file-name="checkmark.svg"
                        width={20}
                      />
                    </div>
                  </div>
                  <div
                    className="emotion-10"
                  >
                    <span
                      className="emotion-9"
                    >
                      point
                    </span>
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="emotion-39"
      >
        <div
          className="emotion-3"
        >
          <button
            aria-label="Expand Section"
            className="emotion-1"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="emotion-153"
              color="#808080"
              data-file-name="chevron.svg"
              width={20}
            />
          </button>
          <h4
            className="emotion-2"
          >
            Media
          </h4>
        </div>
      </div>
      <div
        className="emotion-39"
      >
        <div
          className="emotion-3"
        >
          <button
            aria-label="Expand Section"
            className="emotion-1"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="emotion-153"
              color="#808080"
              data-file-name="chevron.svg"
              width={20}
            />
          </button>
          <h4
            className="emotion-2"
          >
            Metrics
          </h4>
        </div>
      </div>
      <div
        className="emotion-39"
      >
        <div
          className="emotion-3"
        >
          <button
            aria-label="Expand Section"
            className="emotion-1"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="emotion-153"
              color="#808080"
              data-file-name="chevron.svg"
              width={20}
            />
          </button>
          <h4
            className="emotion-2"
          >
            Source
          </h4>
        </div>
      </div>
      <div
        className="emotion-39"
      >
        <div
          className="emotion-3"
        >
          <button
            aria-label="Expand Section"
            className="emotion-1"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="emotion-153"
              color="#808080"
              data-file-name="chevron.svg"
              width={20}
            />
          </button>
          <h4
            className="emotion-2"
          >
            System
          </h4>
        </div>
      </div>
    </div>
    <div
      className="emotion-177"
    >
      <button
        aria-label="Cancel"
        className="emotion-174"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="crossSmall.svg"
          width={18}
        />
        Cancel
      </button>
      <div
        className="emotion-175"
      />
      <button
        aria-disabled={true}
        aria-label="Add Selected Filters"
        className="emotion-176"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="plus.svg"
          width={16}
        />
        Add Selected Filters
      </button>
    </div>
  </div>,
]
`;

exports[`<Filters /> should open the menu 1`] = `
Array [
  .emotion-0 {
  height: 1px;
  box-shadow: 0 0 4px 0 rgba(0,0,0,1);
  z-index: 10;
  margin-top: -1px;
}

<div
    className="emotion-0"
  />,
  .emotion-75 {
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-70 {
  overflow-x: auto;
}

.emotion-39 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-39:last-of-type > div:last-of-type {
  border-bottom: 1px solid #3b3b3b;
}

.emotion-39:first-of-type > div {
  border-top: none;
}

.emotion-3 {
  border-top: 1px solid #3b3b3b;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 h4 {
  font-size: 15px;
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-40:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-74 {
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-71 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: nowrap;
  -ms-flex-flow: nowrap;
  flex-flow: nowrap;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
}

.emotion-71:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-71[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-71,
.emotion-71:hover,
.emotion-71:visited {
  background-color: #808080;
}

.emotion-71:hover {
  background-color: #b3b3b3;
}

.emotion-71[aria-disabled=true] {
  background-color: #808080;
}

.emotion-71 svg {
  margin-right: 8px;
}

.emotion-72 {
  width: 8px;
  min-width: 8px;
}

.emotion-73 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: nowrap;
  -ms-flex-flow: nowrap;
  flex-flow: nowrap;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
}

.emotion-73:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-73[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-73,
.emotion-73:hover,
.emotion-73:visited {
  background-color: #73b61c;
}

.emotion-73:hover {
  background-color: #96c955;
}

.emotion-73[aria-disabled=true] {
  background-color: #808080;
}

.emotion-73 svg {
  margin-right: 8px;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-38 {
  width: 100%;
  background-color: #191919;
}

.emotion-37 {
  padding: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-14 {
  margin-left: -16px;
  margin-right: -16px;
  padding: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  border-top: 4px solid #3b3b3b;
}

.emotion-14:first-of-type {
  padding-top: 0;
  border-top: none;
}

.emotion-14:last-of-type {
  padding-bottom: 0;
}

.emotion-4 {
  font-family: Roboto Mono;
  font-weight: 400;
}

.emotion-13 {
  margin-left: 32px;
  border-top: 1px solid #3b3b3b;
}

.emotion-13:first-of-type {
  border-top: none;
}

.emotion-12 {
  padding: 8px;
  color: #b3b3b3;
  margin-left: -32px;
}

.emotion-12:hover {
  background-color: #027aff38;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding-bottom: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-5 {
  margin: 0;
  padding: 0;
  width: 16px;
  height: 16px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-7 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-6 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-10 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding-left: 8px;
}

.emotion-9 {
  color: #b3b3b3;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
}

<div
    className="emotion-75"
  >
    <div
      className="emotion-70"
    >
      <div
        className="emotion-39"
      >
        <div
          className="emotion-3"
        >
          <button
            aria-label="Collapse Section"
            className="emotion-1"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="emotion-0"
              color="#808080"
              data-file-name="chevron.svg"
              width={20}
            />
          </button>
          <h4
            className="emotion-2"
          >
            Analysis
          </h4>
        </div>
        <div
          className="emotion-38"
        >
          <div
            className="emotion-37"
          >
            <div
              className="emotion-14"
            >
              <h4
                className="emotion-4"
              >
                zvi
              </h4>
              <div
                className="emotion-13"
              >
                <div
                  className="emotion-12"
                >
                  <label
                    className="emotion-11"
                  >
                    <div
                      className="emotion-8"
                    >
                      <input
                        className="emotion-5"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="analysis.zvi.tinyProxy"
                      />
                      <div
                        className="emotion-7"
                      >
                        <svg
                          className="emotion-6"
                          data-file-name="checkmark.svg"
                          width={20}
                        />
                      </div>
                    </div>
                    <div
                      className="emotion-10"
                    >
                      <span
                        className="emotion-9"
                      >
                        tinyProxy
                      </span>
                    </div>
                  </label>
                </div>
              </div>
            </div>
            <div
              className="emotion-14"
            >
              <h4
                className="emotion-4"
              >
                zvi-image-similarity
              </h4>
              <div
                className="emotion-13"
              >
                <div
                  className="emotion-12"
                >
                  <label
                    className="emotion-11"
                  >
                    <div
                      className="emotion-8"
                    >
                      <input
                        className="emotion-5"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="analysis.zvi-image-similarity.simhash"
                      />
                      <div
                        className="emotion-7"
                      >
                        <svg
                          className="emotion-6"
                          data-file-name="checkmark.svg"
                          width={20}
                        />
                      </div>
                    </div>
                    <div
                      className="emotion-10"
                    >
                      <span
                        className="emotion-9"
                      >
                        simhash
                      </span>
                    </div>
                  </label>
                </div>
              </div>
            </div>
            <div
              className="emotion-14"
            >
              <h4
                className="emotion-4"
              >
                zvi-object-detection
              </h4>
              <div
                className="emotion-13"
              >
                <div
                  className="emotion-12"
                >
                  <label
                    className="emotion-11"
                  >
                    <div
                      className="emotion-8"
                    >
                      <input
                        className="emotion-5"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="analysis.zvi-object-detection.count"
                      />
                      <div
                        className="emotion-7"
                      >
                        <svg
                          className="emotion-6"
                          data-file-name="checkmark.svg"
                          width={20}
                        />
                      </div>
                    </div>
                    <div
                      className="emotion-10"
                    >
                      <span
                        className="emotion-9"
                      >
                        count
                      </span>
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="emotion-39"
      >
        <div
          className="emotion-3"
        >
          <button
            aria-label="Expand Section"
            className="emotion-1"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="emotion-40"
              color="#808080"
              data-file-name="chevron.svg"
              width={20}
            />
          </button>
          <h4
            className="emotion-2"
          >
            Clip
          </h4>
        </div>
      </div>
      <div
        className="emotion-39"
      >
        <div
          className="emotion-3"
        >
          <button
            aria-label="Expand Section"
            className="emotion-1"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="emotion-40"
              color="#808080"
              data-file-name="chevron.svg"
              width={20}
            />
          </button>
          <h4
            className="emotion-2"
          >
            Location
          </h4>
        </div>
      </div>
      <div
        className="emotion-39"
      >
        <div
          className="emotion-3"
        >
          <button
            aria-label="Expand Section"
            className="emotion-1"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="emotion-40"
              color="#808080"
              data-file-name="chevron.svg"
              width={20}
            />
          </button>
          <h4
            className="emotion-2"
          >
            Media
          </h4>
        </div>
      </div>
      <div
        className="emotion-39"
      >
        <div
          className="emotion-3"
        >
          <button
            aria-label="Expand Section"
            className="emotion-1"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="emotion-40"
              color="#808080"
              data-file-name="chevron.svg"
              width={20}
            />
          </button>
          <h4
            className="emotion-2"
          >
            Metrics
          </h4>
        </div>
      </div>
      <div
        className="emotion-39"
      >
        <div
          className="emotion-3"
        >
          <button
            aria-label="Expand Section"
            className="emotion-1"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="emotion-40"
              color="#808080"
              data-file-name="chevron.svg"
              width={20}
            />
          </button>
          <h4
            className="emotion-2"
          >
            Source
          </h4>
        </div>
      </div>
      <div
        className="emotion-39"
      >
        <div
          className="emotion-3"
        >
          <button
            aria-label="Expand Section"
            className="emotion-1"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="emotion-40"
              color="#808080"
              data-file-name="chevron.svg"
              width={20}
            />
          </button>
          <h4
            className="emotion-2"
          >
            System
          </h4>
        </div>
      </div>
    </div>
    <div
      className="emotion-74"
    >
      <button
        aria-label="Cancel"
        className="emotion-71"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="crossSmall.svg"
          width={18}
        />
        Cancel
      </button>
      <div
        className="emotion-72"
      />
      <button
        aria-disabled={true}
        aria-label="Add Selected Filters"
        className="emotion-73"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="plus.svg"
          width={16}
        />
        Add Selected Filters
      </button>
    </div>
  </div>,
]
`;

exports[`<Filters /> should render properly 1`] = `
Array [
  .emotion-10 {
  padding: 4px;
  border-bottom: 1px solid #3b3b3b;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  z-index: 10;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 190px;
  max-width: 190px;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #73b61c;
}

.emotion-2:hover {
  background-color: #96c955;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

.emotion-3 {
  width: 8px;
  min-width: 8px;
}

.emotion-5 {
  height: 4px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 1px solid transparent;
  padding: 12px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  color: #e0e0e0;
  background-color: #191919;
  padding-left: 32px;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjNGE0YTRhIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
  background-repeat: no-repeat,repeat;
  background-position: left 8px top 50%;
  background-size: 20px;
}

.emotion-6:focus {
  outline: 0;
  border: 1px solid #73b61c;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-6:focus:hover {
  border: 1px solid #73b61c;
}

.emotion-6::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-6::-moz-placeholder {
  font-style: italic;
}

.emotion-6:-ms-input-placeholder {
  font-style: italic;
}

.emotion-6::placeholder {
  font-style: italic;
}

.emotion-6:hover {
  border: 1px solid #ffffff;
}

.emotion-8 {
  width: 42px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  background-color: #808080;
  margin: 0;
  padding: 0;
  border: 0;
  cursor: not-allowed;
}

.emotion-7 {
  color: #3b3b3b;
}

<div
    className="emotion-10"
  >
    <div
      className="emotion-4"
    >
      <button
        aria-label="Add Metadata Filters"
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-0"
          >
            <svg
              data-file-name="plus.svg"
              width={20}
            />
          </div>
          Add Metadata Filters
        </div>
      </button>
      <div
        className="emotion-3"
      />
    </div>
    <div
      className="emotion-5"
    />
    <form
      action=""
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-9"
      >
        <input
          className="emotion-6"
          onChange={[Function]}
          placeholder="Create text filter (search name or field value)"
          type="text"
          value=""
        />
        <button
          aria-disabled={true}
          aria-label="Search"
          className="emotion-8"
          onClick={[Function]}
          type="submit"
        >
          <svg
            className="emotion-7"
            data-file-name="plus.svg"
            width={20}
          />
        </button>
      </div>
    </form>
  </div>,
  .emotion-0 {
  overflow: auto;
}

<div
    className="emotion-0"
  />,
]
`;
